...
                                    } else Color.White,
                                    shape = CircleShape
                                )
                                .clickable {
                                    backgroundColourPickerOpen = true
                                }
                                .testTag("BACKGROUND_COLOUR_BUTTON")
                        )
                        // Text colour change button
                        Box(
                            modifier = Modifier
                                .size(50.dp) // TODO: Hard coded, change for different screen sizes
                                .shadow(15.dp, CircleShape)
...
                                    } else Color.White,
                                    shape = CircleShape
                                )
                                .clickable {
                                    textColourPickerOpen = true
                                }
                                .testTag("TEXT_COLOUR_BUTTON")
                        ) {
                            Text(
                                text = "Aa",
                                color = Color(viewModel.textColour.value),
                                modifier = Modifier.align(Alignment.Center),
                                fontWeight = FontWeight.Normal,
...
                    color = Color(viewModel.textColour.value),
                    fontStyle = MaterialTheme.typography.h6.fontStyle,
                    fontFamily = MaterialTheme.typography.h6.fontFamily,
                    fontWeight = MaterialTheme.typography.h6.fontWeight,
                    fontSize = MaterialTheme.typography.h6.fontSize
                ),
                testTag = "TITLE_SECTION"
            )
            Spacer(modifier = Modifier.height(16.dp))

            TransparentHintTextField(
                text = contentState.text,
                hint = contentState.hint,
...
                    fontStyle = MaterialTheme.typography.body1.fontStyle,
                    fontFamily = MaterialTheme.typography.body1.fontFamily,
                    fontWeight = MaterialTheme.typography.body1.fontWeight,
                    fontSize = MaterialTheme.typography.body1.fontSize
                ),
                modifier = Modifier.fillMaxHeight(),
                testTag = "CONTENT_SECTION"
            )
        }
    }
    if (exitWithoutSaveOpen) {
        ExitWithoutSaving(
            onDismiss = { exitWithoutSaveOpen = false },
...
                                            colourInt
                                        )
                                    )
                                    backgroundColourPickerOpen =
                                        false // Closes the colour select menu
                                }
                                .testTag("BACKGROUND_COLOUR_OPTION")
                        )
                    }
                }
            }
        )

...
                                            colourInt
                                        )
                                    )
                                    textColourPickerOpen =
                                        false // Closes the colour select menu
                                }
                                .testTag("TEXT_COLOUR_OPTION")
                        )
                    }
                }
            }
        )
    }
...
